Use environment conversion service when resolving placeholders
Closes gh-39944